--- a/sample-demo/demo-client/src/main/resources/application.yml
+++ b/sample-demo/demo-client/src/main/resources/application.yml
@@ -16,12 +16,12 @@ spring:
     oauth2:
       client:
         registration:
-          messaging-client-oidc:
+          messaging-client-oidc: # 这个是我们自己定义客户端
             provider: spring
-            client-id: messaging-client
-            client-secret: secret
-            authorization-grant-type: authorization_code
-            redirect-uri: "http://127.0.0.1:8080/login/oauth2/code/{registrationId}"
+            client-id: messaging-client #客户端id
+            client-secret: secret # 客户端密钥
+            authorization-grant-type: authorization_code # 客户端授权方式,授权码模式
+            redirect-uri: "http://127.0.0.1:8080/login/oauth2/code/{registrationId}"  # 这个是一个模板 {baseUrl}/login/oauth2/code/{registrationId} 官方说明：https://docs.spring.io/spring-security/reference/6.1-SNAPSHOT/servlet/oauth2/login/core.html
             scope: openid, profile
             client-name: messaging-client-oidc
           messaging-client-authorization-code:
@@ -48,6 +48,7 @@ spring:
             client-name: messaging-client-device-code
         provider:
           spring:
+            # 这个对应的是我们自己的授权服务器
             issuer-uri: http://127.0.0.1:9000
 
 messages:
